--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,21 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+/* For WebKit browsers (Chrome, Safari, etc.) */
+.scrollable-container::-webkit-scrollbar {
+  width: 2px; 
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Track */
+.scrollable-container::-webkit-scrollbar-track {
+  background: #c9c9c9; 
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Handle */
+.scrollable-container::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* Handle on hover */
+.scrollable-container::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
