--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,18 @@ button:focus-visible {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.animation{
+  animation: fade-down .5s forwards;
+  opacity: 0;
+}
+@keyframes fade-down{
+  0%{
+      opacity: 0;
+      transform: translateY(-.5rem);
+  }
+  100%{
+      opacity: 1;
+      transform: none;
+  }
+};
